--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,20 +1,28 @@
-.table {
-    width: 100%;
+:root {
+    font-family: Arial, sans-serif;
 }
-/* 
-table th, table td {
-    min-width: 70px;
-    text-align: center;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
 
-@media (max-width: 600px) {
-    table th, table td {
-        font-size: 12px;
-        width: 60px;
-        height: 40px;
-        min-width: 50px;
-    }
-} */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.title {
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    background-color: aliceblue;
+    padding: 20px;
+}
+
+.info {
+    max-width: 700px;
+    margin: 30px auto;
+    padding: 0 20px;
+}
+
+.footer {
+    background-color: aliceblue;
+    padding: 20px;
+    text-align: center;
+}
